Add raspicat_description ROS 2 version

--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>raspicat_description</name>
   <version>0.1.0</version>
   <description>The raspicat_description package</description>
-
   <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
+  <author>Tatsuhiro Ikebe</author>
+  <author email="kozasa@rt-net.jp">Shuhei Kozasa</author>
 
   <license>Apache-2.0</license>
 
-  <url type="repository">https://github.com/rt-net/raspicat_description</url>
-  <url type="bugtracker">https://github.com/rt-net/raspicat_description/issues</url>
-  <url type="website">https://rt-net.github.io/tutorials/raspicat/</url>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-
+  <depend>joint_state_publisher_gui</depend>
   <depend>joint_state_publisher</depend>
   <depend>robot_state_publisher</depend>
+  <depend>rviz2</depend>
   <depend>urdf</depend>
   <depend>xacro</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+    <gazebo_ros gazebo_model_path="${prefix}/../"/>
+  </export>
 </package>
