--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,20 @@
 cmake_minimum_required(VERSION 3.5)
 project(raspicat_description)
 
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 17)
-endif()
+find_package(ament_cmake_auto REQUIRED)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
-
-find_package(ament_cmake REQUIRED)
-
-install(DIRECTORY
-  launch
-  meshes
-  urdf
-  robots
-  rviz
-  DESTINATION share/${PROJECT_NAME}/
-)
+ament_auto_find_build_dependencies()
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-ament_package()
+ament_auto_package(
+  INSTALL_TO_SHARE
+  launch
+  meshes
+  urdf
+  robots
+  rviz
+)
