--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
 
   <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>joint_state_publisher_gui</depend>
   <depend>joint_state_publisher</depend>
